make sure titles and content-preview header icons wrap properly on mobile devices

--- a/res/css/components/content.less
+++ b/res/css/components/content.less
@@ -88,6 +88,8 @@
     font-weight: normal;
     margin: 1rem 0;
     line-height: 1.3;
+    overflow-wrap: break-word;
+    max-width: 100%;
 
     .content-preview & {
         margin: 0 0 .75rem;
@@ -180,6 +182,7 @@
     display: flex;
     align-items: flex-start;
     flex: 1;
+    min-width: 0;
     margin: 0;
     text-align: left;
 }
@@ -191,6 +194,11 @@
 .content-meta-info {
     margin-left: .75rem;
     flex: 1;
+    min-width: 0;
+}
+
+.content-meta-avater {
+    flex: 0 0 auto;
 }
 
 .content-meta-author {
